--- a/style.css
+++ b/style.css
@@ -130,8 +130,8 @@ input[type="file"]::file-selector-button {
 #loader {
   display: none; /* hidden initially */
   position: fixed;
-  top: auto;
-  left: auto;
+ top: 40%;
+ left: 48%;
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.6); /* semi-transparent dark overlay */
